# geratehaus-app

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TESTS.md  TODO.md  docker-compose.yml  notizen.tmp  notizuen.tmp  tmp.md
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_push_subscriptions.py  0003_barcode_tokens.py  0004_default_branding_color.py  0005_fahrzeug_sitzplaetze.py  0006_einsatz_felder_und_bemerkung.py  0007_json_zu_jsonb.py  0008_person_profil_felder.py  0009_test_barcodes.py  0010_auf_anfahrt.py  0011_barcode_ablaufdatum.py  0012_einsatz_ereignisse.py  0013_sitzplatz_reservierung.py  0014_eintragung_ip_user_agent.py  0015_geplanter_abschluss.py  0016_gruppe.py  0017_dienstbuch_geschlossen.py  0018_reservierung_vorschau_dienstbuch.py  0019_dienststunden_reservierung.py  0020_person_funktion_und_timeline.py  0021_person_punkte.py  0022_person_bild_reservierungen.py  0023_person_fk_cascade.py  0024_person_email.py  0025_person_punkt_abbau_modus.py  0026_fahrzeugbuchung_reservierungen.py  (+8 more)
backend/app/: main.py
backend/tests/: conftest.py  test_barcode_auth.py  test_buchung_aktion.py  test_dienststunden_doppelbuchung.py  test_dienststunden_schwellenwert.py  test_dienststunden_timeline.py  test_divera_client.py  test_divera_personal_service.py  test_email_html.py  test_logging_setup.py  test_moderator_auth.py  test_punkte_belohnung.py  test_security.py  test_sentry_setup.py  test_setup.py  test_update_kanal.py
(+266 files in other folders)
