[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geratehaus-app"
version = "0.3.0-beta.1"
description = "Gerätehaus.app – selbst hostbare PWA für Feuerwehren"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "apscheduler>=3.10",
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pywebpush>=2.0",
    "aiosmtplib>=3.0",
    "structlog>=24.4",
    "python-dateutil>=2.9",
    "pillow>=10.4",
    "python-barcode>=0.15",
    "sentry-sdk[fastapi]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
